@@ -143,6 +143,9 @@ Our recommendation is to use [BiocParallel][7.1]. Note that 'fork'
 clusters do not rpovide any gain from parallelizing code on
 Windows. Socket clusters work on all operating systems.
 
+Also checks `Deprecated` Packages currently specified in release and devel
+versions of Bioconductor (`ERROR`).
+
 [7.1]: https://bioconductor.org/packages/BiocParallel
 
 ## Version Checks
